--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "web-galsan",
+  "name": "galsan-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router": "^3.0.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "cross-env NODE_PATH=src react-scripts start",
-    "build": "cross-env NODE_PATH=src react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
